# tonykolomeytsev.github.io

./: 404.html  Cargo.toml  README.md  atom.xml  config.toml  index.html  robots.txt  search_index.en.js  sitemap.xml
.github/workflows/: deploy_and_publish.yaml  main.yml
archive/: index.html
content/: _index.md
content/posts/: 2023-08-26_first_post.md  _index.md
content/posts/2023-08-27_deploy_to_robots_with_docker/: deploy-old-way.drawio  index.md
content/posts/2023-08-28_eurobot-experience-docker-with-ros/: index.md
content/posts/2023-08-29_eurobot-experience-docker-with-ros/: index.md
content/posts/2023-09-01_deploy_to_robots_with_docker/: index.md
css/: override.css
page/1/: index.html
posts/: atom.xml  index.html
posts/deploy-to-robots-with-docker/: index.html
posts/esoteric-gradle-optimizations-reject-android-return-to-kotlin-jvm/: index.html
posts/eurobot-experience-docker-with-ros/: index.html
posts/first-post/: index.html
posts/free-and-effective-gitlab-caching-for-gradle/: index.html
posts/page/1/: index.html
public/: search_index.en.js
src/: main.rs
static/css/: override.css
tags/: index.html
tags/android/: atom.xml  index.html
tags/docker/: atom.xml  index.html
tags/eurobot/: atom.xml  index.html
tags/gitlab/: atom.xml  index.html
tags/gradle/: atom.xml  index.html
tags/guide/: atom.xml  index.html
tags/practical-case/: atom.xml  index.html
tags/robotics/: atom.xml  index.html
tags/ros/: atom.xml  index.html
tags/skoltech/: atom.xml  index.html
templates/: page.html
templates/partials/: head.html
(+4 files in other folders)
